Önem dereceli değişti

--- a/Karar Destek Sistemleri/index.html
+++ b/Karar Destek Sistemleri/index.html
@@ -14,13 +14,13 @@
   </head>
   <body>
     <div class="kapsayici">
-      <nav class="navbar navbar-expand-lg bg-dark p-3" data-bs-theme="dark">
+      <nav class="navbar bg-dark p-3" data-bs-theme="dark">
         <div class="container-fluid">
-          <span class="navbar-brand">Hüseyin Ömer Küçük - 20050701014</span>
-          <span class="navbar-brand">Mert Bozkurt - 20050701015</span>
-          <span class="karar-destek">Karar Destek Sistemleri</span>
-          <span class="navbar-brand">Furkan Toprak - 20050701016</span>
-          <span class="navbar-brand">Aysun Ataş - 20050701017</span>
+          <span class="ilk-span" >Hüseyin Ömer Küçük - 20050701014</span>
+          <span class="ilk-span" >Mert Bozkurt - 20050701015</span>
+          <span class="karar-destek" >Karar Destek Sistemleri</span>
+          <span class="ilk-span" >Furkan Toprak - 20050701016</span>
+          <span class="ilk-span">Aysun Ataş - 20050701017</span>
         </div>
       </nav>
 
