önem dereceleri değişti

--- a/Karar Destek Sistemleri/index.html
+++ b/Karar Destek Sistemleri/index.html
@@ -179,13 +179,13 @@
           </thead>
           <tbody>
             <tr>
-              <td><input type="range" class="form-range" min="0" max="1" step="0.1" value="0" style="width: 60px;" onchange="showValue(this.value, 'ulaşımMaliyetiValue')"/></td>
-              <td><input type="range" class="form-range" min="0" max="1" step="0.1" value="0" style="width: 60px;" onchange="showValue(this.value, 'ulaşımSuresiValue')"/></td>
-              <td><input type="range" class="form-range" min="0" max="1" step="0.1" value="0" style="width: 60px;" onchange="showValue(this.value, 'Konaklama Maliyeti')"/></td>
-              <td><input type="range" class="form-range" min="0" max="1" step="0.1" value="0" style="width: 60px;" onchange="showValue(this.value, 'Konaklama Süresi')"/></td>
-              <td><input type="range" class="form-range" min="0" max="1" step="0.1" value="0" style="width: 60px;" onchange="showValue(this.value, 'Merkeze Uzaklık')"/></td>
-              <td><input type="range" class="form-range" min="0" max="1" step="0.1" value="0" style="width: 60px;" onchange="showValue(this.value, 'Değerlendirme Puanı')"/></td>
-              <td><input type="range" class="form-range" min="0" max="1" step="0.1" value="0" style="width: 60px;" onchange="showValue(this.value, 'Hava Sıcaklığı')"/></td>
+              <td><input type="range" id="form1" class="form-range" min="0" max="1" step="0.1" value="0"  onchange="showValue(this.value, 'ulaşımMaliyetiValue')"/></td>
+              <td><input type="range" id="form2" class="form-range" min="0" max="1" step="0.1" value="0"  onchange="showValue(this.value, 'ulaşımSuresiValue')"/></td>
+              <td><input type="range" id="form3" class="form-range" min="0" max="1" step="0.1" value="0"  onchange="showValue(this.value, 'Konaklama Maliyeti')"/></td>
+              <td><input type="range" id="form4" class="form-range" min="0" max="1" step="0.1" value="0"  onchange="showValue(this.value, 'Konaklama Süresi')"/></td>
+              <td><input type="range" id="form5" class="form-range" min="0" max="1" step="0.1" value="0"  onchange="showValue(this.value, 'Merkeze Uzaklık')"/></td>
+              <td><input type="range" id="form6" class="form-range" min="0" max="1" step="0.1" value="0"  onchange="showValue(this.value, 'Değerlendirme Puanı')"/></td>
+              <td><input type="range" id="form7" class="form-range" min="0" max="1" step="0.1" value="0"  onchange="showValue(this.value, 'Hava Sıcaklığı')"/></td>
             </tr>
             <tr>
               <td><span id="ulaşımMaliyetiValue">0.0</span></td>
