--- a/Karar Destek Sistemleri/index.html
+++ b/Karar Destek Sistemleri/index.html
@@ -42,9 +42,9 @@
             <tr>
               <th scope="row">1</th>
               <td><input type="number" id="11" value="1200" /></td>
-              <td><input type="number" id="12" value="420" /></td>
+              <td><input type="number" id="12" value="440" /></td>
               <td><input type="number" id="13" value="10" /></td>
-              <td><input type="number" id="14" value="10" /></td>
+              <td><input type="number" id="14" value="3" /></td>
               <td><input type="number" id="15" value="10" /></td>
               <td><input type="number" id="16" value="8.5" /></td>
               <td><input type="number" id="17" value="9" /></td>
@@ -52,99 +52,99 @@
             
              <tr>
                 <th scope="row">2</th>
-                <td><input type="number" id="21" value="10" /></td>
-                <td><input type="number" id="22" value="10" /></td>
+                <td><input type="number" id="21" value="1380" /></td>
+                <td><input type="number" id="22" value="480" /></td>
                 <td><input type="number" id="23" value="10" /></td>
-                <td><input type="number" id="24" value="10" /></td>
-                <td><input type="number" id="25" value="10" /></td>
+                <td><input type="number" id="24" value="5" /></td>
+                <td><input type="number" id="25" value="15" /></td>
                 <td><input type="number" id="26" value="6.3" /></td>
                 <td><input type="number" id="27" value="13" /></td>
               </tr>
 
               <tr>
                 <th scope="row">3</th>
-                <td><input type="number" id="31" value="10" /></td>
-                <td><input type="number" id="32" value="10" /></td>
+                <td><input type="number" id="31" value="1450" /></td>
+                <td><input type="number" id="32" value="530" /></td>
                 <td><input type="number" id="33" value="10" /></td>
-                <td><input type="number" id="34" value="10" /></td>
-                <td><input type="number" id="35" value="10" /></td>
+                <td><input type="number" id="34" value="3" /></td>
+                <td><input type="number" id="35" value="8" /></td>
                 <td><input type="number" id="36" value="5.4" /></td>
                 <td><input type="number" id="37" value="13" /></td>
               </tr>
 
               <tr>
                 <th scope="row">4</th>
-                <td><input type="number" id="41" value="10" /></td>
-                <td><input type="number" id="42" value="10" /></td>
+                <td><input type="number" id="41" value="1030" /></td>
+                <td><input type="number" id="42" value="350" /></td>
                 <td><input type="number" id="43" value="10" /></td>
-                <td><input type="number" id="44" value="10" /></td>
-                <td><input type="number" id="45" value="10" /></td>
+                <td><input type="number" id="44" value="4" /></td>
+                <td><input type="number" id="45" value="3" /></td>
                 <td><input type="number" id="46" value="7" /></td>
                 <td><input type="number" id="47" value="17" /></td>
               </tr>
 
               <tr>
                 <th scope="row">5</th>
-                <td><input type="number" id="51" value="10" /></td>
-                <td><input type="number" id="52" value="10" /></td>
+                <td><input type="number" id="51" value="1470" /></td>
+                <td><input type="number" id="52" value="480" /></td>
                 <td><input type="number" id="53" value="10" /></td>
-                <td><input type="number" id="54" value="10" /></td>
-                <td><input type="number" id="55" value="10" /></td>
+                <td><input type="number" id="54" value="4" /></td>
+                <td><input type="number" id="55" value="11" /></td>
                 <td><input type="number" id="56" value="3.7" /></td>
                 <td><input type="number" id="57" value="15" /></td>
               </tr>
 
               <tr>
                 <th scope="row">6</th>
-                <td><input type="number" id="61" value="10" /></td>
-                <td><input type="number" id="62" value="10" /></td>
+                <td><input type="number" id="61" value="1520" /></td>
+                <td><input type="number" id="62" value="600" /></td>
                 <td><input type="number" id="63" value="10" /></td>
-                <td><input type="number" id="64" value="10" /></td>
-                <td><input type="number" id="65" value="10" /></td>
+                <td><input type="number" id="64" value="3" /></td>
+                <td><input type="number" id="65" value="5" /></td>
                 <td><input type="number" id="66" value="6.8" /></td>
                 <td><input type="number" id="67" value="20" /></td>
               </tr>
 
               <tr>
                 <th scope="row">7</th>
-                <td><input type="number" id="71" value="10" /></td>
-                <td><input type="number" id="72" value="10" /></td>
+                <td><input type="number" id="71" value="950" /></td>
+                <td><input type="number" id="72" value="180" /></td>
                 <td><input type="number" id="73" value="30" /></td>
-                <td><input type="number" id="74" value="10" /></td>
-                <td><input type="number" id="75" value="10" /></td>
+                <td><input type="number" id="74" value="5" /></td>
+                <td><input type="number" id="75" value="7" /></td>
                 <td><input type="number" id="76" value="8.3" /></td>
                 <td><input type="number" id="77" value="5" /></td>
               </tr>
 
               <tr>
                 <th scope="row">8</th>
-                <td><input type="number" id="81" value="10" /></td>
-                <td><input type="number" id="82" value="10" /></td>
+                <td><input type="number" id="81" value="1640" /></td>
+                <td><input type="number" id="82" value="520" /></td>
                 <td><input type="number" id="83" value="10" /></td>
-                <td><input type="number" id="84" value="10" /></td>
-                <td><input type="number" id="85" value="10" /></td>
+                <td><input type="number" id="84" value="4" /></td>
+                <td><input type="number" id="85" value="8" /></td>
                 <td><input type="number" id="86" value="9.1" /></td>
                 <td><input type="number" id="87" value="8" /></td>
               </tr>
 
               <tr>
                 <th scope="row">9</th>
-                <td><input type="number" id="91" value="10" /></td>
-                <td><input type="number" id="92" value="15" /></td>
+                <td><input type="number" id="91" value="1375" /></td>
+                <td><input type="number" id="92" value="260" /></td>
                 <td><input type="number" id="93" value="10" /></td>
-                <td><input type="number" id="94" value="10" /></td>
-                <td><input type="number" id="95" value="10" /></td>
+                <td><input type="number" id="94" value="5" /></td>
+                <td><input type="number" id="95" value="2" /></td>
                 <td><input type="number" id="96" value="4.9" /></td>
                 <td><input type="number" id="97" value="12" /></td>
               </tr>
 
               <tr>
                 <th scope="row">10</th>
-                <td><input type="number" id="101" value="10" /></td>
-                <td><input type="number" id="102" value="10" /></td>
+                <td><input type="number" id="101" value="1220" /></td>
+                <td><input type="number" id="102" value="300" /></td>
                 <td><input type="number" id="103" value="10" /></td>
-                <td><input type="number" id="104" value="10" /></td>
-                <td><input type="number" id="105" value="10" /></td>
+                <td><input type="number" id="104" value="3" /></td>
+                <td><input type="number" id="105" value="6" /></td>
                 <td><input type="number" id="106" value="6.2" /></td>
                 <td><input type="number" id="107" value="10" /></td>
               </tr>
@@ -155,14 +155,14 @@
       <div class="alt-kapsayici">
         <div class="alt-sol">
           <button class="btn btn-primary" type="button" onclick="addRow()" style="display: block; width: 100%; height: 45px;"> Satır Ekle </button>
-          <button class="btn btn-danger " type="button" onclick="deleteLastRow()" style="display: block; width: 100%; height: 45px;">Satır Sil</button>
-          <button class="btn btn-warning " type="button" onclick="removeResult()" style="display: block; width: 100%; height: 45px;">Sonucu Sıfırla</button>
-          <button class="btn btn-success" onclick="showResult()" style="display: block; width: 100%; height: 45px;">Sonucu Göster</button>
+          <button class="btn btn-danger " type="button" onclick="deleteLastRow()" style="display: block; width: 100%; height: 45px; margin-top: 10px;">Satır Sil</button>
+          <button class="btn btn-warning " type="button" onclick="removeResult()" style="display: block; width: 100%; height: 45px; margin-top: 10px;">Sonucu Sıfırla</button>
+          <button class="btn btn-success" onclick="showResult()" style="display: block; width: 100%; height: 45px; margin-top: 10px;">Sonucu Göster</button>
         </div>
 
 
         <div class="alt-orta"><div class="card">
-       <h5 class="bg-black p-2" style="color: #d0572f;">Önem Derecesi</h5>
+       <h5 class="bg-dark p-2" style="color: #d0572f;">Önem Derecesi</h5>
        <p class="card-text">
         <table>
           <thead>
@@ -200,11 +200,22 @@
         </table>
        </p></div>
       </div>
-        <div class="alt-sag"><div class="card">
-          <h5 class="card-title">Hesap Sonucu</h5>
-         <p class="card-text" id="output"></p>
-        </div></div>
-      </div>
+        <div class="alt-sag" style="text-align: center; justify-content:center; display: flex;">
+          <div id="alt-kart1" class="card text-bg-success mx-3" style="width: 40%; display: none;">
+          <div class="card-header fw-bolder">En İyi Sonuç</div>
+          <div class="card-body">
+          <h5 class="card-title"></h5>
+          <p class="card-text"></p>
+          </div>
+          </div>
+
+          <div id="alt-kart2" class="card text-bg-danger mx-3" style="width: 40%; display: none;">
+          <div class="card-header fw-bolder">En Kötü Sonuç</div>
+          <div class="card-body">
+          <h5 class="card-title"></h5>
+          <p class="card-text"></p>
+          </div>
+          </div>
 
       <script src="script.js"></script>
       <script
