--- a/Karar Destek Sistemleri/index.html
+++ b/Karar Destek Sistemleri/index.html
@@ -154,10 +154,10 @@
 
       <div class="alt-kapsayici">
         <div class="alt-sol">
-          <button class="btn btn-primary" type="button" onclick="addRow()" style="display: block; width: 100%; height: 45px;"> Satır Ekle </button>
-          <button class="btn btn-danger " type="button" onclick="deleteLastRow()" style="display: block; width: 100%; height: 45px; margin-top: 10px;">Satır Sil</button>
-          <button class="btn btn-warning " type="button" onclick="removeResult()" style="display: block; width: 100%; height: 45px; margin-top: 10px;">Sonucu Sıfırla</button>
-          <button class="btn btn-success" onclick="showResult()" style="display: block; width: 100%; height: 45px; margin-top: 10px;">Sonucu Göster</button>
+          <button class="btn btn-primary" type="button" onclick="addRow()" style="display: inline-block; width: 50%; height: 45px;"> Satır Ekle </button>
+          <button class="btn btn-danger " type="button" onclick="deleteLastRow()" style="display: inline-block; width: 50%; height: 45px; ">Satır Sil</button>
+          <button class="btn btn-warning " type="button" onclick="removeResult()" style="display: inline-block; width: 50%; height: 45px; ">Sonucu Sıfırla</button>
+          <button class="btn btn-success" onclick="showResult()" style="display: inline-block; width: 50%; height: 45px;">Sonucu Göster</button>
         </div>
 
 
