--- a/Karar Destek Sistemleri/index.html
+++ b/Karar Destek Sistemleri/index.html
@@ -39,8 +39,8 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <th scope="row">1</th>
+            <tr id="1">
+              <th>İlk Seçim</th>
               <td><input type="number" id="11" value="1200" /></td>
               <td><input type="number" id="12" value="440" /></td>
               <td><input type="number" id="13" value="10" /></td>
@@ -50,8 +50,8 @@
               <td><input type="number" id="17" value="9" /></td>
             </tr>
             
-             <tr>
-                <th scope="row">2</th>
+             <tr id="2">
+                <th>İkinci Seçim</th>
                 <td><input type="number" id="21" value="1380" /></td>
                 <td><input type="number" id="22" value="480" /></td>
                 <td><input type="number" id="23" value="10" /></td>
@@ -61,8 +61,8 @@
                 <td><input type="number" id="27" value="13" /></td>
               </tr>
 
-              <tr>
-                <th scope="row">3</th>
+              <tr id="3">
+                <th>3 Seçim</th>
                 <td><input type="number" id="31" value="1450" /></td>
                 <td><input type="number" id="32" value="530" /></td>
                 <td><input type="number" id="33" value="10" /></td>
@@ -72,8 +72,8 @@
                 <td><input type="number" id="37" value="13" /></td>
               </tr>
 
-              <tr>
-                <th scope="row">4</th>
+              <tr id="4">
+                <th>4 Seçim</th>
                 <td><input type="number" id="41" value="1030" /></td>
                 <td><input type="number" id="42" value="350" /></td>
                 <td><input type="number" id="43" value="10" /></td>
@@ -83,8 +83,8 @@
                 <td><input type="number" id="47" value="17" /></td>
               </tr>
 
-              <tr>
-                <th scope="row">5</th>
+              <tr id="5">
+                <th>5 Seçim</th>
                 <td><input type="number" id="51" value="1470" /></td>
                 <td><input type="number" id="52" value="480" /></td>
                 <td><input type="number" id="53" value="10" /></td>
@@ -94,8 +94,8 @@
                 <td><input type="number" id="57" value="15" /></td>
               </tr>
 
-              <tr>
-                <th scope="row">6</th>
+              <tr id="6">
+                <th>6 Seçim</th>
                 <td><input type="number" id="61" value="1520" /></td>
                 <td><input type="number" id="62" value="600" /></td>
                 <td><input type="number" id="63" value="10" /></td>
@@ -105,8 +105,8 @@
                 <td><input type="number" id="67" value="20" /></td>
               </tr>
 
-              <tr>
-                <th scope="row">7</th>
+              <tr id="7">
+                <th>Yedinci Seçim</th>
                 <td><input type="number" id="71" value="950" /></td>
                 <td><input type="number" id="72" value="180" /></td>
                 <td><input type="number" id="73" value="30" /></td>
@@ -116,8 +116,8 @@
                 <td><input type="number" id="77" value="5" /></td>
               </tr>
 
-              <tr>
-                <th scope="row">8</th>
+              <tr id="8">
+                <th>Sekizinci Seçim</th>
                 <td><input type="number" id="81" value="1640" /></td>
                 <td><input type="number" id="82" value="520" /></td>
                 <td><input type="number" id="83" value="10" /></td>
@@ -127,8 +127,8 @@
                 <td><input type="number" id="87" value="8" /></td>
               </tr>
 
-              <tr>
-                <th scope="row">9</th>
+              <tr id="9">
+                <th>Dokuzuncu Seçim</th>
                 <td><input type="number" id="91" value="1375" /></td>
                 <td><input type="number" id="92" value="260" /></td>
                 <td><input type="number" id="93" value="10" /></td>
@@ -138,8 +138,8 @@
                 <td><input type="number" id="97" value="12" /></td>
               </tr>
 
-              <tr>
-                <th scope="row">10</th>
+              <tr id="10">
+                <th>10 Seçim</th>
                 <td><input type="number" id="101" value="1220" /></td>
                 <td><input type="number" id="102" value="300" /></td>
                 <td><input type="number" id="103" value="10" /></td>
