--- a/Karar Destek Sistemleri/index.html
+++ b/Karar Destek Sistemleri/index.html
@@ -28,7 +28,7 @@
         <table class="table table-borderless mt-3 overflow-auto" id="myTable">
           <thead class="table-dark">
             <tr>
-              <th scope="col" class="p-3">#</th>
+              <th scope="col" class="p-3">Seçenekler</th>
               <th scope="col" class="p-3" id="001">Ulaşım Maliyeti</th>
               <th scope="col" class="p-3" id="002">Ulaşım Süresi (Dk)</th>
               <th scope="col" class="p-3" id="003">Konaklama Maliyeti</th>
@@ -222,6 +222,29 @@
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDf"
         crossorigin="anonymous"
-      ></script>
+      ></script>  
+      <!-- <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-app.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-database.js"></script>
+
+      <script>
+        // Firebase yapılandırma bilgilerini buraya yapıştırın
+        const firebaseConfig = {
+          apiKey: "AIzaSyCi_0i8vLeNDJHoo7l3dyXayJyoW-_NmI8",
+          authDomain: "karardesteksistemleri-67e2f.firebaseapp.com",
+          databaseURL: "https://karardesteksistemleri-67e2f-default-rtdb.firebaseio.com",
+          projectId: "karardesteksistemleri-67e2f",
+          storageBucket: "karardesteksistemleri-67e2f.appspot.com",
+          messagingSenderId: "388373853591",
+          appId: "1:388373853591:web:432883d14f562691c600d2",
+          measurementId: "G-LRR0J9Z7MF"
+        };
+
+        // Firebase'i başlat
+        firebase.initializeApp(firebaseConfig);
+
+        // Firebase veritabanı referansını al
+        var database = firebase.database();
+      </script> -->
+
     </body>
 </html>
