--- a/Karar Destek Sistemleri/index.html
+++ b/Karar Destek Sistemleri/index.html
@@ -216,12 +216,48 @@
           <p class="card-text"></p>
           </div>
           </div>
+  
+    <input type="file" id="excelFileInput" onchange="excelToJson('excelFileInput')">
 
-      <script src="script.js"></script>
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDf"
-        crossorigin="anonymous"
-      ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.3/xlsx.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
+    <script src="script.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDf"
+      crossorigin="anonymous"
+    ></script>
+
+      <script>
+        // Excel dosyasından verileri oku ve JSON'a dönüştür
+   function excelToJson(fileInputId) {
+        var input = document.getElementById(fileInputId);
+        var file = input.files[0];
+
+        var reader = new FileReader();
+
+        reader.onload = function (e) {
+            var data = new Uint8Array(e.target.result);
+            var workbook = XLSX.read(data, { type: 'array' });
+
+            // Sadece ilk sayfa üzerinde çalışıyoruz, eğer birden fazla sayfa varsa döngü kullanabilirsiniz.
+            var sheet = workbook.Sheets[workbook.SheetNames[0]];
+
+            // SheetJS kütüphanesinin fonksiyonu ile JSON'a dönüştür
+            var jsonData = XLSX.utils.sheet_to_json(sheet, { header: 1 });
+
+            // HTML tablosundaki input alanlarına verileri ekleyin
+            for (var i = 0; i < jsonData.length; i++) {
+                var rowId = i + 1;
+                for (var j = 1; j < jsonData[i].length; j++) {
+                    var cellId = rowId.toString() + j.toString();
+                    document.getElementById(cellId).value = jsonData[i][j];
+                }
+            }
+        };
+
+        reader.readAsArrayBuffer(file);
+    }
+</script>
     </body>
 </html>
