--- a/Karar Destek Sistemleri/index.html
+++ b/Karar Destek Sistemleri/index.html
@@ -40,10 +40,10 @@
           </thead>
           <tbody>
             <tr id="1">
-              <th>İlk Seçim</th>
+              <th>Denizbreeze Hotel</th>
               <td><input type="number" id="11" value="1200" /></td>
               <td><input type="number" id="12" value="440" /></td>
-              <td><input type="number" id="13" value="10" /></td>
+              <td><input type="number" id="13" value="10200" /></td>
               <td><input type="number" id="14" value="3" /></td>
               <td><input type="number" id="15" value="10" /></td>
               <td><input type="number" id="16" value="8.5" /></td>
@@ -51,10 +51,10 @@
             </tr>
             
              <tr id="2" class="satir">
-                <th>İkinci Seçim</th>
+                <th>Lunaris Spa & Retreat</th>
                 <td><input type="number" id="21" value="1380" /></td>
                 <td><input type="number" id="22" value="480" /></td>
-                <td><input type="number" id="23" value="10" /></td>
+                <td><input type="number" id="23" value="9500" /></td>
                 <td><input type="number" id="24" value="5" /></td>
                 <td><input type="number" id="25" value="15" /></td>
                 <td><input type="number" id="26" value="6.3" /></td>
@@ -62,10 +62,10 @@
               </tr>
 
               <tr id="3" class="satir">
-                <th>3 Seçim</th>
+                <th>Palmira Resort</th>
                 <td><input type="number" id="31" value="1450" /></td>
                 <td><input type="number" id="32" value="530" /></td>
-                <td><input type="number" id="33" value="10" /></td>
+                <td><input type="number" id="33" value="7830" /></td>
                 <td><input type="number" id="34" value="3" /></td>
                 <td><input type="number" id="35" value="8" /></td>
                 <td><input type="number" id="36" value="5.4" /></td>
@@ -73,10 +73,10 @@
               </tr>
 
               <tr id="4" class="satir">
-                <th>4 Seçim</th>
+                <th>Doğa Panorama Inn</th>
                 <td><input type="number" id="41" value="1030" /></td>
                 <td><input type="number" id="42" value="350" /></td>
-                <td><input type="number" id="43" value="10" /></td>
+                <td><input type="number" id="43" value="8300" /></td>
                 <td><input type="number" id="44" value="4" /></td>
                 <td><input type="number" id="45" value="3" /></td>
                 <td><input type="number" id="46" value="7" /></td>
@@ -84,10 +84,10 @@
               </tr>
 
               <tr id="5" class="satir">
-                <th>5 Seçim</th>
+                <th>Sakin Sahil Motel</th>
                 <td><input type="number" id="51" value="1470" /></td>
                 <td><input type="number" id="52" value="480" /></td>
-                <td><input type="number" id="53" value="10" /></td>
+                <td><input type="number" id="53" value="5430" /></td>
                 <td><input type="number" id="54" value="4" /></td>
                 <td><input type="number" id="55" value="11" /></td>
                 <td><input type="number" id="56" value="3.7" /></td>
@@ -95,10 +95,10 @@
               </tr>
 
               <tr id="6" class="satir">
-                <th>6 Seçim</th>
+                <th>Rüya Bahçe Konakları</th>
                 <td><input type="number" id="61" value="1520" /></td>
                 <td><input type="number" id="62" value="600" /></td>
-                <td><input type="number" id="63" value="10" /></td>
+                <td><input type="number" id="63" value="9800" /></td>
                 <td><input type="number" id="64" value="3" /></td>
                 <td><input type="number" id="65" value="5" /></td>
                 <td><input type="number" id="66" value="6.8" /></td>
@@ -106,10 +106,10 @@
               </tr>
 
               <tr id="7" class="satir">
-                <th>Yedinci Seçim</th>
+                <th>Gökyüzü Lodge</th>
                 <td><input type="number" id="71" value="950" /></td>
                 <td><input type="number" id="72" value="180" /></td>
-                <td><input type="number" id="73" value="30" /></td>
+                <td><input type="number" id="73" value="8740" /></td>
                 <td><input type="number" id="74" value="5" /></td>
                 <td><input type="number" id="75" value="7" /></td>
                 <td><input type="number" id="76" value="8.3" /></td>
@@ -117,10 +117,10 @@
               </tr>
 
               <tr id="8" class="satir">
-                <th>Sekizinci Seçim</th>
+                <th>Şelale Retreat</th>
                 <td><input type="number" id="81" value="1640" /></td>
                 <td><input type="number" id="82" value="520" /></td>
-                <td><input type="number" id="83" value="10" /></td>
+                <td><input type="number" id="83" value="13150" /></td>
                 <td><input type="number" id="84" value="4" /></td>
                 <td><input type="number" id="85" value="8" /></td>
                 <td><input type="number" id="86" value="9.1" /></td>
@@ -128,10 +128,10 @@
               </tr>
 
               <tr id="9" class="satir">
-                <th>Dokuzuncu Seçim</th>
+                <th>Zenith Palace Hotel</th>
                 <td><input type="number" id="91" value="1375" /></td>
                 <td><input type="number" id="92" value="260" /></td>
-                <td><input type="number" id="93" value="10" /></td>
+                <td><input type="number" id="93" value="6780" /></td>
                 <td><input type="number" id="94" value="5" /></td>
                 <td><input type="number" id="95" value="2" /></td>
                 <td><input type="number" id="96" value="4.9" /></td>
@@ -139,10 +139,10 @@
               </tr>
 
               <tr id="10" class="satir">
-                <th>10 Seçim</th>
+                <th>Günbatımı Villası</th>
                 <td><input type="number" id="101" value="1220" /></td>
                 <td><input type="number" id="102" value="300" /></td>
-                <td><input type="number" id="103" value="10" /></td>
+                <td><input type="number" id="103" value="7560" /></td>
                 <td><input type="number" id="104" value="3" /></td>
                 <td><input type="number" id="105" value="6" /></td>
                 <td><input type="number" id="106" value="6.2" /></td>
